--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/vuelidate": "^0.7.4",
     "bootstrap-vue": "^2.0.0-rc.18",
     "core-js": "^2.6.5",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
     "vue-resource": "^1.5.1",
-    "vuelidate": "^0.7.4"
+    "vuelidate": "^0.7.4",
+    "register-service-worker": "^1.5.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
