--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^8.0.0",
     "vue-resource": "^1.5.1",
-    "vuelidate": "^0.7.4",
-    "register-service-worker": "^1.5.2"
+    "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
